public interface Document {
    public void printDocument();
}